# search-stat-py

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
etc/: run-worker.sh
src/: config.py  main.py  tasks.py
tests/: search.xml  test_search_endpoint.py  test_tasks.py
