[tool.poetry]
name = "search-stat-py"
version = "0.1.0"
description = ""
authors = ["Andrey Bogoyavlensky <abogoyavlensky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
feedparser = "^5.2"
requests = "^2.21"
starlette = "^0.11.4"
uvicorn = "^0.6.1"
dramatiq = {version = "^1.5",extras = ["redis", "watch"]}
environs = "^4.1"

[tool.poetry.dev-dependencies]
black = "=18.3-alpha.0"
rope = "^0.12.0"
isort = "^4.3"
flake8 = "^3.7"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
